install prebuild-install in amplify.yml

--- a/amplify.yml
+++ b/amplify.yml
@@ -12,6 +12,7 @@ backend:
     build:
       commands:
         - '# Execute Amplify CLI with the helper script'
+        - npm install -g prebuild-install --unsafe-perm=true
         - update-alternatives --install /usr/bin/python3 python3 /usr/local/bin/python3.8 11
         - /usr/local/bin/pip3.8 install --user pipenv
         - amplifyPush --simple
