plateletSendFromEmailAddress parameter for send user feedback

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -412,6 +412,14 @@
         }
       ]
     },
+    "AMPLIFY_function_plateletSendUserFeedback_plateletSendFromEmailAddress": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "plateletSendUserFeedback"
+        }
+      ]
+    },
     "AMPLIFY_function_plateletSendUserFeedback_plateletSendToEmailAddress": {
       "usedBy": [
         {
